Adding UML diagrams, Adding JavaDoc, minor changes in README.MD.